# spark

./: pom.xml
sql/core/: pom.xml
sql/core/native/liquid-cache-jni/: Cargo.toml
sql/core/native/liquid-cache-jni/src/: flight_client.rs  lib.rs  session.rs
sql/core/src/main/scala/org/apache/spark/sql/execution/adaptive/: CoalesceShufflePartitions.scala  ShufflePartitionsUtil.scala
sql/core/src/main/scala/org/apache/spark/sql/execution/liquidcache/: LiquidCacheBatchScanExec.scala  LiquidCacheColumnarRule.scala  LiquidCacheExtension.scala  LiquidCacheJniClient.scala  LiquidCacheNative.scala  LiquidCachePartitionReader.scala  LiquidCachePartitionReaderFactory.scala
sql/core/src/test/scala/org/apache/spark/sql/execution/adaptive/: CoalesceShufflePartitionsSuite.scala
sql/core/src/test/scala/org/apache/spark/sql/execution/liquidcache/: LiquidCacheExtensionSuite.scala
