[package]
name = "liquid-cache-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
arrow = { version = "57", features = ["ipc"] }
arrow-ipc = "57"
arrow-flight = { version = "57", features = ["flight-sql-experimental"] }
arrow-schema = "57"
datafusion = "52"
datafusion-proto = "52"
tonic = "0.14"
prost = "0.14"
bytes = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
